--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html"
+          ><span class="logo1">Web</span><span class="logo2">Studio</span></a
+        >
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -24,12 +34,12 @@
       </address>
     </header>
     <main>
-      <section>
+      <section class="heading">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="order-button">Order Service</button>
       </section>
       <section>
-        <h2>Our Advantages</h2>
+        <h2 class="hid">Our Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -63,7 +73,7 @@
       </section>
       <section>
         <h2>Our Team</h2>
-        <ul>
+        <ul class="our-team">
           <li>
             <img
               src="./images/mark-guerrero.jpg"
@@ -104,7 +114,9 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"
+        ><span class="logo1">Web</span><span class="logo2">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
