--- a/index.html
+++ b/index.html
@@ -17,107 +17,174 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"
-          ><span class="logo1">Web</span><span class="logo2">Studio</span></a
+        <a href="./index.html" class="logo-blue">
+          Web<span class="logo-black">Studio</span></a
         >
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="./index.html" class="navigation">Studio</a></li>
+          <li><a href="" class="navigation">Portfolio</a></li>
+          <li><a href="" class="navigation">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address-section">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="mail-and-phone"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="mail-and-phone"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <section class="heading">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="heading-head">Effective Solutions for Your Business</h1>
         <button type="button" class="order-button">Order Service</button>
       </section>
-      <section>
+      <section class="advantages">
         <h2 class="hid">Our Advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="advantages-head">Strategy</h3>
+            <p class="advantages-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="advantages-head">Punctuality</h3>
+            <p class="advantages-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="advantages-head">Diligence</h3>
+            <p class="advantages-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="advantages-head">Technologies</h3>
+            <p class="advantages-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul class="our-team">
-          <li>
+      <section class="our-team">
+        <h2 class="our-team-head">Our Team</h2>
+        <ul>
+          <li class="our-team-list-point">
             <img
               src="./images/mark-guerrero.jpg"
               width="264"
               alt="Man with laptop presenting something"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="our-team-list-point-head">Mark Guerrero</h3>
+            <p class="our-team-list-point-paragraph">Product Designer</p>
           </li>
-          <li>
+          <li class="our-team-list-point">
             <img
               src="./images/tom-ford.jpg"
               width="264"
               alt="Confident man posing in profile to the camera"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="our-team-list-point-head">Tom Ford</h3>
+            <p class="our-team-list-point-paragraph">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-team-list-point">
             <img
               src="./images/camila-garcia.jpg"
               width="264"
               alt="Young woman wearing pink sweater"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="our-team-list-point-head">Camila Garcia</h3>
+            <p class="our-team-list-point-paragraph">Marketing</p>
           </li>
-          <li>
+          <li class="our-team-list-point">
             <img
               src="./images/daniel-wilson.jpg"
               width="264"
               alt="Confident man posing straight to the camera"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="our-team-list-point-head">Daniel Wilson</h3>
+            <p class="our-team-list-point-paragraph">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section class="our-portfolio">
+        <h2 class="our-portfolio-head">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/banking-app.jpg"
+              width="360"
+              alt="Screenshots of mobile banking apps"
+            />
+            <h3 class="our-portfolio-list-point-head">Banking App</h3>
+            <p class="our-portfolio-list-point-paragraph">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashless-payment.jpg"
+              width="360"
+              alt="Scanning QR code with phone"
+            />
+            <h3 class="our-portfolio-list-point-head">Cashless Payment</h3>
+            <p class="our-portfolio-list-point-paragraph">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditation-app.jpg"
+              width="360"
+              alt="Laptop and phone with adverts on screen"
+            />
+            <h3 class="our-portfolio-list-point-head">Meditation App</h3>
+            <p class="our-portfolio-list-point-paragraph">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/taxi-service.jpg"
+              width="360"
+              alt="Driver using navigation app to drive"
+            />
+            <h3 class="our-portfolio-list-point-head">Taxi Service</h3>
+            <p class="our-portfolio-list-point-paragraph">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screen-illustrations.jpg"
+              width="360"
+              alt="Beautiful wallpapers with lead of purple color"
+            />
+            <h3 class="our-portfolio-list-point-head">Screen Illustrations</h3>
+            <p class="our-portfolio-list-point-paragraph">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/online-courses.jpg"
+              width="360"
+              alt="Smiling woman with earphones looking at the phone"
+            />
+            <h3 class="our-portfolio-list-point-head">Online Courses</h3>
+            <p class="our-portfolio-list-point-paragraph">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="./index.html"
-        ><span class="logo1">Web</span><span class="logo2">Studio</span></a
+      <a href="./index.html" class="logo-blue">
+        Web<span class="logo-white">Studio</span></a
       >
-      <p>
+      <p class="footer-paragraph">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
