--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="foot">
       <a href="./index.html" class="logo-blue">
         Web<span class="logo-white">Studio</span></a
       >
